# misc_config

./: .envrc  .gitignore  .gitmodules  .ignore  .lenvs  .pre-commit-config.yaml  .related  .tool-versions  .venv  README.md  base_agenda.org  bindings  bookmarks  config.el  custom.el  defer-macro.el  dodo.py  doom_init.el  doot.toml  dooter.py  helm_help.org  init.el  notes.org  packages.el  run_me.sh  space_init.el  startup-order  straight-versions.el
.tasks/: emacs_todos.org  sphinx.toml  triage_todos.org
_wiki/: emacs_notes.org
bash/: .reminder  _aliases.bash  _aliases.linux.bash  _base_path.bash  _basic_utils.bash  _bootstrap.bash  _exports.bash  conda.bash  cron.bash  emacs.bash  interactive.bash  interactive.linux.bash  login.bash  non_interactive.bash  todos  ubuntu_bashrc  ubuntu_profile
bash/completions/: completions.init
bash/components/: ai.bash  cmake.bash  dotnet.bash  erlang.bash  godot.bash  gpg.bash  haskell.bash  infinity.bash  javascript.bash  jvm.bash  latex.bash  mail.bash  music.bash  ocaml.bash  python.bash  rust.bash  web.bash
bash/shortcuts/: readme  switch-to-firefox.bash  switch-to-tor.bash
cookie_templates/: readme.md
cookie_templates/jg_el/: cookiecutter.json
cookie_templates/jg_epub/: cookiecutter.json
cookie_templates/jg_instal/: cookiecutter.json
cookie_templates/jg_py/: cookiecutter.json
cookie_templates/jg_py/{{cookiecutter.proj_name}}/: LICENSE  Makefile  architecture.md  dodo.py  pyproject.toml  run_me.sh  setup.cfg
cookie_templates/jg_py/{{cookiecutter.proj_name}}/docs/: conf.py
cookie_templates/jg_rust/: cookiecutter.json
cookie_templates/jg_rust_py/: cookiecutter.json
dooters/: dcim_doot.toml  dcim_dooter.py  home_doot.toml  home_dooter.py  pdf_doot.toml  pdf_dooter.py  quick_hash_doot.toml  quick_hash_dooter.py  setup_doot.toml  setup_dooter.toml  thread_doot.toml  thread_dooter.py
file-templates/emacs-lisp-mode/: __mode  __org_babel
file-templates/gdscript-mode/: tool
file-templates/kotlin-mode/: __
file-templates/python-mode/: __cli  __dodo  __pyproject_toml  __tests  cairo  entry-points  toml_defaults
file-templates/rust-mode/: __build.rs  __mod.rs
layers/__template_layer/: keybindings.el  layers.el  packages.el
layers/ccalc/: packages.el
layers/char-insertion/: README.org  config.el  funcs.el  keybindings.el  packages.el
layers/chuck/: config.el  funcs.el  keybindings.el  layers.el  packages.el
layers/clingo/: packages.el
layers/doctest/: README.org  funcs.el  packages.el  parsing_notes.el  test_file.org
layers/fsm/: fsm.el
layers/helm-org/: layers.el  packages.el
layers/jg-exclusions/: packages.el
layers/jg_exclusions/: README.org  packages.el
layers/jg_layer/: abbrevs_defs  char_inserting.el  clean_org.el  config.el  funcs.el  keybindings.el  layers.el  org-tagging.el  packages.el  register-overlay.el
layers/jg_misc/: config.el  packages.el
layers/jg_org/: config.el  funcs.el  layers.el  packages.el
layers/jg_states/: packages.el
layers/jg_twitter/: README.org  config.el  funcs.el  layers.el  packages.el
layers/logic/: packages.el
layers/music/: config.el  funcs.el  keybindings.el  layers.el  packages.el
layers/netlogo/: config.el  funcs.el  layers.el  packages.el
layers/org-tagging/: config.el  funcs.el  layers.el  packages.el
layers/org_unit/: funcs.el  packages.el
layers/overlay_control/: README.org  config.el  funcs.el  packages.el
layers/pipelang/: README.org  packages.el
layers/sclang/: config.el  funcs.el  keybindings.el  layers.el  packages.el  sclang.yaml
layers/subprocess/: comint-test.el  myprog.py
layers/tidal/: config.el  (+4 more)
lisp/: comint-test.el  crontab-mode.el  custom-evil-state.el  debug-helper.el  example-byte-compile-fail.el  example_funcs.el  institution_grammar.el  jgTheme-theme.el  local-state-bind.el  my-aliases.el  my-colours.el  my-emacs.el  my-functions.el  my-hooks.el  my-keybindings.el  my-modes.el  my-variables.el  my-win-emacs.el  my-win-modes.el  myprog.py  mytimerprog.py  obsolete-face-macros.el  packages  popup_todo.el  process_test.el  snippet-edit.el  stdio_test.py  test-company-backend.el  timer_process_test.el  to_integrate  tracerel.el  transient-test.el  trie-mode-generic.el  trie-mode.el
lisp-lib/: tidal.el  tidal_backup  tidal_backup_2
maintenance/: apt.versions  cabal.version  cron.backup  git.version  rust.versions  snap.version  tex.versions
nu/: config.nu
org/: archive.org  base_agenda.org  emacs_notes.org  githooks.org  notes.org  python_testbed.org  undo-tree.org
setup_files/: .condarc  .cookiecutterrc  .ghci  .gitconfig  .gitignore_global  .ispell_english  .mbsyncrc  .npmrc  abbrevs_defs  aliases.bash  archive.org  base_agenda.org  exports.bash  gtags.conf  languageSpecific.bash  main.bash  main_bash  pomodoro_log.org  python_testbed.org  run_me.sh  sclang.yaml  terminfo-24bit.src
templates/: abbrevs.defs  abbrevs_defs
templates/projects/jg_rust/{{cookiecutter.proj_name}}/: Cargo.toml  Makefile  architecture.md  dodo.py  doot.toml  dooter.py
templates/projects/jg_rust/{{cookiecutter.proj_name}}/.cargo/: config.toml
templates/projects/jg_rust/{{cookiecutter.proj_name}}/docs/: conf.py  index.rst
templates/projects/jg_rust/{{cookiecutter.proj_name}}/src/: lib.rs
templates/projects/jg_rust_el/{{cookiecutter.proj_name}}/: Cargo.toml  architecture.md  doot.toml  dooter.py  test_load.el
templates/projects/jg_rust_el/{{cookiecutter.proj_name}}/.cargo/: config.toml
templates/projects/jg_rust_el/{{cookiecutter.proj_name}}/docs/: index.rst
templates/projects/jg_rust_el/{{cookiecutter.proj_name}}/src/: lib.rs
templates/projects/jg_rust_py/{{cookiecutter.proj_name}}/: Cargo.toml  architecture.md  doot.toml  dooter.py  pyproject.toml  requirements.txt
templates/projects/jg_rust_py/{{cookiecutter.proj_name}}/.cargo/: config.toml
templates/projects/jg_rust_py/{{cookiecutter.proj_name}}/{{cookiecutter.proj_name}}/: __init__.py
terminal/: abbrevs_defs  conda.bash  git_vars  main.bash
test_lisp/: macro_test.el  obsolete_network_code.el  test.el
themes/: jg-Iosvkem-theme.el
vim/: vimrc
(+4299 files in other folders)
