[metadata]
name             = {{cookiecutter.proj_name}}
version          = 0.0.1
author           = John Grey
author_email     = jgrey.n.plus.one at gmail.com
description      = {{cookiecutter.desc}}
long_description = file:README.md
keywords         = {{cookiecutter.tags}}
license          = ACAB
url              = https://github.com/jgrey4296/{{cookiecutter.proj_name}}
classifiers      = Programming Language :: Python :: 3.5

[options]
packages = {{cookiecutter.proj_name}}
# zip_safe = False
# include_package_data = False
#

# [options.package_data]

[options.entry_points]
#console_scripts =
# an_example = a_package:main
