# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name    = "{{cookiecutter.proj_name}}"
version = "0.0.1"
edition = "{{cookiecutter.edition}}"
authors = [ "{{cookiecutter._author}}"]

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "{{cookiecutter.proj_name}}"

[dependencies]

[dev-dependencies]
