# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name    = "{{cookiecutter.proj_name}}"
version = "0.0.1"
edition = "{{cookiecutter.edition}}"
authors = [ "{{cookiecutter._author}}"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cty   = "0.2.2"
emacs = "0.18"

[dev-dependencies]
