# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name    = "{{cookiecutter.proj_name}}"
version = "0.1.0"
edition = "{{cookiecutter.edition}}"
authors = [ "{{cookiecutter._author}}"]

[lib]
crate-type = ["cdylib"]
path       = "{{cookiecutter.proj_name}}/lib.rs"

[dependncies]

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]

[dev-dependencies]
